# sdl-bird

./: CMakeLists.txt  README.md  build.sh
source/: animation.cpp  animation.h  constants.h  game.cpp  game.h  main.cpp  texture.cpp  texture.h  vector2d.h
source/gameobjects/: bird.cpp  bird.h  box.cpp  box.h  gameobject.h
source/logger/: logger.cpp  logger.h
